--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-    <header class="header wrapper">
+    <header class="header">
         <div class="nav">
             <img src="./images/header_logo.png" alt="logo">
             <a href="">ПРО НАС</a>
@@ -57,7 +57,7 @@
             </div>
         </div>
     </section>
-    <section class="section2 wrapper">
+    <section class="section2">
         <h2>КАТАЛОГ ПРОДУКЦІЇ</h2>
         <div class="sect2_icons">
             <a href="" class="product-btn">Уся продукція</a>
@@ -115,7 +115,7 @@
             <p>Від нашого села, з душею!</p>
         </div>
     </section>
-    <section class="section4 wrapper">
+    <section class="section4">
         <h2>НАША ПРОДУКЦІЯ</h2>
     <div class="main_ph">
         <div class="photo_sect4">
